--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,3 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=2a9db0eb91faf945ee4b279b007a9ac7"
 }
