--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=4dee97ea0169f5f065b6681b33349ff6"
+    "/js/app.js": "/js/app.js?id=8abea2c95abb5e069699c4371b2216c7",
+    "/css/app.css": "/css/app.css?id=940b236dcf6f900bbf97fac60a1bc455"
 }
